foter text wrap fixed.

--- a/style/footer.css
+++ b/style/footer.css
@@ -193,6 +193,13 @@ footer{
         
         .footer__nav-links{
           margin-inline-start: 0;
+          
+        }
+      }
+
+      .footer__privacy{
+        .footer__privacy-links{
+          gap: 1em;
         }
       }
     }
